Added Bitnami Spark Cluster

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,13 +1,52 @@
 services:
+  spark:
+    image: docker.io/bitnami/spark:3.5
+    volumes:
+      - ./data/:/data
+    environment:
+      - SPARK_MODE=master
+      - SPARK_RPC_AUTHENTICATION_ENABLED=no
+      - SPARK_RPC_ENCRYPTION_ENABLED=no
+      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
+      - SPARK_SSL_ENABLED=no
+      - SPARK_USER=spark
+    ports:
+      - "8080:8080"
+
+  spark-worker:
+    image: docker.io/bitnami/spark:3.5
+    depends_on:
+      spark:
+        condition: service_started
+    volumes:
+      - ./data/:/data
+    environment:
+      - SPARK_MODE=worker
+      - SPARK_MASTER_URL=spark://spark:7077
+      - SPARK_WORKER_MEMORY=1G
+      - SPARK_WORKER_CORES=1
+      - SPARK_RPC_AUTHENTICATION_ENABLED=no
+      - SPARK_RPC_ENCRYPTION_ENABLED=no
+      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
+      - SPARK_SSL_ENABLED=no
+      - SPARK_USER=spark
+
   pismo-data:
     build: ./data/
     volumes:
       - ./data/:/app/
+
   pismo-app:
     depends_on:
       pismo-data:
         condition: service_completed_successfully
+      spark-worker:
+        condition: service_started
     build: .
+    ports:
+      - "4040:4040"
+    environment:
+      - SPARK_MASTER=spark://spark:7077
     volumes:
       - ./data/:/data/
       - ./pismo.py:/app/pismo.py
