--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,14 +2,15 @@ services:
   spark:
     image: docker.io/bitnami/spark:3.5
     volumes:
-      - ./data/:/data
+      - pismo-data:/data
+      - output-data:/output/
     environment:
       - SPARK_MODE=master
       - SPARK_RPC_AUTHENTICATION_ENABLED=no
       - SPARK_RPC_ENCRYPTION_ENABLED=no
       - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
       - SPARK_SSL_ENABLED=no
-      - SPARK_USER=spark
+      - SPARK_USER=root
     ports:
       - "8080:8080"
 
@@ -19,7 +20,8 @@ services:
       spark:
         condition: service_started
     volumes:
-      - ./data/:/data
+      - pismo-data:/data
+      - output-data:/output/
     environment:
       - SPARK_MODE=worker
       - SPARK_MASTER_URL=spark://spark:7077
@@ -29,12 +31,13 @@ services:
       - SPARK_RPC_ENCRYPTION_ENABLED=no
       - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
       - SPARK_SSL_ENABLED=no
-      - SPARK_USER=spark
+      - SPARK_USER=root
 
   pismo-data:
     build: ./data/
     volumes:
       - ./data/:/app/
+      - pismo-data:/data
 
   pismo-app:
     depends_on:
@@ -48,5 +51,10 @@ services:
     environment:
       - SPARK_MASTER=spark://spark:7077
     volumes:
-      - ./data/:/data/
+      - pismo-data:/data/
+      - output-data:/output/
       - ./pismo.py:/app/pismo.py
+
+volumes:
+  pismo-data:
+  output-data:
