--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -50,6 +50,7 @@ services:
       - "4040:4040"
     environment:
       - SPARK_MASTER=spark://spark:7077
+      - SPARK_USER=root
     volumes:
       - pismo-data:/data/
       - output-data:/output/
